Added post setup script to run after crush is running to enable MySQL user and logging database.